# trade-btc

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
apps/trader/: main.py
config/: default.yaml  secrets.local.yaml.example
docs/: usage.md
src/backtest/: __init__.py  runner.py
src/connectors/: __init__.py  base.py  utils.py
src/connectors/aster/: __init__.py  connector.py
src/connectors/binance/: __init__.py  connector.py
src/connectors/hyperliquid/: __init__.py  connector.py
src/core/: __init__.py  clock.py  config.py  events.py  logging.py  mode.py  models.py  secrets.py  telegram.py
src/execution/: __init__.py  router.py
src/indicators/: __init__.py  pipeline.py
src/marketdata/: __init__.py  aggregator.py  feed.py  storage.py
src/risk/: __init__.py  manager.py
src/sim/: __init__.py  order_book.py  paper_exchange.py  position_book.py  slippage.py
src/strategies/: __init__.py  base.py
src/strategies/btc_multi_indicator/: __init__.py  strategy.py
src/strategies/funding_arb/: __init__.py  collector.py  executor.py  signal.py  strategy.py
src/web/: dashboard.html  server.py  status_store.py
tests/integration/: test_paper_trading_flow.py
tests/unit/: test_aggregator.py  test_config.py  test_funding_arb_signal.py  test_indicator_pipeline.py  test_models.py  test_paper_exchange.py  test_risk_manager.py
